Title is now hidden on small screen to prevent menu from line breaking

--- a/src/documents/assets/css/main.css.styl
+++ b/src/documents/assets/css/main.css.styl
@@ -54,6 +54,10 @@ body
         height 60px
         line-height 45px
 
+        @media (max-width: 400px)
+            display: none
+
+
 // Menu styles
 
 aside
